--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import url(font-awesome.min.css);
+/* @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic"); */
+
 @font-face {
 	font-family: "SiyamRupali";
 	src: url('../fonts/SiyamRupali.woff') format('woff');
@@ -5,10 +8,6 @@
 	font-style: normal;
 	font-display: block;
   }
-
-
-@import url(font-awesome.min.css);
-/* @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
 /* Reset */
 
@@ -1640,13 +1639,14 @@
 			transition: none !important;
 		}
 
-/* Type  letter-spacing: 0.025em;  */
+/* Type */
 
 	body, input, select, textarea {
 		color: #ffffff;
 		font-family: "SiyamRupali";
 		font-size: 17pt;
 		font-weight: 300;
+		letter-spacing: 0.025em;
 		line-height: 1.65;
 	}
 
@@ -1852,6 +1852,8 @@
 		header.major > p {
 			font-size: 0.7em;
 			font-weight: 600;
+/*			letter-spacing: 0.25em; */
+			letter-spacing: 0.15em;
 			margin-bottom: 0;
 			text-transform: uppercase;
 		}
@@ -1935,6 +1937,7 @@
 		display: block;
 		font-size: 0.8em;
 		font-weight: 600;
+		letter-spacing: 0.15em; 	/* 0.25em  */
 		margin: 0 0 1em 0;
 		text-transform: uppercase;
 	}
@@ -2549,6 +2552,7 @@
 		font-size: 0.8em;
 		font-weight: 600;
 		height: 3.5em;
+		letter-spacing: 0.15em;		/* 0.25em; */
 		line-height: 3.5em;
 		padding: 0 1.75em;
 		text-align: center;
@@ -3150,6 +3154,7 @@
 		font-weight: 600;
 		height: 3.25em;
 		left: 0;
+		letter-spacing: 0.15em;		/* 0.25em */
 		line-height: 3.25em;
 		margin: 0;
 		position: fixed;
@@ -3508,6 +3513,7 @@
 				#banner > .inner .content p {
 					font-size: 0.7em;
 					font-weight: 600;
+					letter-spacing: 0.15em;	/* 0.25em */
 					text-transform: uppercase;
 				}
 
@@ -3892,6 +3898,7 @@
 						display: block;
 						font-size: 0.8em;
 						font-weight: 600;
+						letter-spacing: 0.15em;   /* 0.25em	*/
 						line-height: 4em;
 						text-decoration: none;
 						text-transform: uppercase;
